# winny

./: .gitignore  Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: app.rs  core.rs  lib.rs  perf.rs  plugins.rs  prelude.rs  render.rs  render_util.rs  renderer.rs  time.rs  window.rs
crates/app/src/input/: controller.rs  mod.rs  mouse_and_key.rs
crates/asset/: Cargo.toml
crates/asset/src/: handle.rs  lib.rs  prelude.rs  reader.rs  server.rs  toml.rs  watcher.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs  prelude.rs  wav.rs
crates/cereal/: Cargo.toml
crates/cereal/cereal_macro/: Cargo.toml
crates/cereal/cereal_macro/src/: lib.rs
crates/cereal/src/: deserialize.rs  lib.rs  serialize.rs
crates/deprecated/: Cargo.toml
crates/deprecated/src/: deprecated_win32.rs  platform.rs
crates/ecs/: Cargo.toml
crates/ecs/macro/: Cargo.toml
crates/ecs/macro/src/: lib.rs
crates/ecs/src/: any.rs  egui_widget.rs  entity.rs  events.rs  lib.rs  linking.rs  prelude.rs  query.rs  resources.rs  schedule.rs  storage.rs  system_param.rs  systems.rs  threads.rs  world.rs
crates/ecs/src/query/: entity_query.rs  filter.rs  impl_macros.rs  iter.rs  mod.rs  state.rs
crates/ecs/src/storage/: archetype.rs  bundle.rs  components.rs  dumb_vec.rs  mod.rs  resources.rs  sparse_set.rs  table.rs
crates/ecs/src/systems/: access.rs  mod.rs  sets.rs  system_param.rs
crates/ecs/src/world/: commands.rs  entity.rs  mod.rs  unsafe_world.rs
crates/ecs_derive/: Cargo.toml
crates/ecs_derive/src/: lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: lib.rs
crates/gfx/: Cargo.toml
crates/gfx/src/: camera.rs  deprecated.rs  editor.rs  gui.rs  image_decoder.rs  lib.rs  light.wgsl  lighting.rs  material.rs  mesh2d.rs  model.rs  noise.rs  particle.rs  png.rs  post_processing.rs  prelude.rs  primitives.rs  primitives.wgsl  render.rs  renderer.rs  shader2.wgsl  sprite.rs  sprite_shader.wgsl  text.rs  texture.rs  transform.rs  vertex.rs
crates/gfx/src/render_pipeline/: bind_group.rs  buffer.rs  material.rs  mod.rs  pipeline.rs  render_assets.rs  render_pass.rs  shader.rs  vertex.rs  vertex_buffer.rs
crates/gfx/src/shaders/: material.wgsl  material2d.wgsl  particles.wgsl  particles_compute.wgsl  primitives.wgsl  sprite_shader.wgsl  sprite_vert.wgsl
crates/hot_reload/: Cargo.toml
crates/hot_reload/macro/: Cargo.toml
crates/hot_reload/macro/src/: lib.rs
crates/hot_reload/src/: lib.rs  prelude.rs
crates/hot_reload_macro/: Cargo.toml
crates/hot_reload_macro/src/: lib.rs
crates/log/: Cargo.toml
crates/log/src/: lib.rs
crates/logger/: Cargo.toml
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/math/: Cargo.toml
crates/math/src/: angle.rs  lib.rs  matrix.rs  quaternion.rs  vector.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: graph.rs  lib.rs  prelude.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs  prelude.rs
crates/window/: Cargo.toml
crates/window/src/: lib.rs  prelude.rs
crates/window/src/input/: controller.rs  mouse_and_key.rs
crates/winny_engine/: Cargo.toml
crates/winny_engine/src/: camera.rs  deprecated_platform.rs  gl.rs  input.rs  lib.rs  logging.rs  macos.rs  math.rs  platform.rs  platform2.rs  prelude.rs  win32.rs  window.rs
crates/winny_engine/src/gfx/: bitmap.rs  light.wgsl  mod.rs  shader2.wgsl  texture.rs
crates/winny_math/: Cargo.toml
crates/winny_math/src/: angle.rs  lib.rs  matrix.rs  prelude.rs  quaternion.rs  vector.rs
examples/asset_reloading/: Cargo.toml
examples/asset_reloading/res/: test.toml
examples/asset_reloading/src/: main.rs
examples/camera/: Cargo.toml
examples/camera/src/: main.rs
examples/custom_material/: Cargo.toml
examples/custom_material/src/: main.rs
examples/egui/: Cargo.toml
examples/egui/src/: main.rs
examples/lighting/: Cargo.toml
examples/lighting/res/saved/: lighting::GlobalMesh  player_mesh.msh
examples/lighting/src/: main.rs
examples/particles/: Cargo.toml
examples/particles/src/: main.rs
examples/sprites/: Cargo.toml
examples/sprites/src/: main.rs
examples/text/: Cargo.toml
examples/text/src/: main.rs
examples/timer/: Cargo.toml
examples/timer/src/: main.rs
res/shaders/: color_material_cpu_particle.wgsl  color_material_particle.wgsl  color_material_sprite.wgsl  copy_texture.wgsl  cpu_particle_vert.wgsl  lighting2d.wgsl  material2d_cpu_particle.wgsl  material2d_particle.wgsl  material2d_sprite.wgsl  mesh2d.wgsl  particle_vert.wgsl  post_processing_vert.wgsl  sprite_vert.wgsl
src/: bin.rs  lib.rs
