[package]
name = "winny"
version = "0.1.0"
edition = "2021"

[lib]
name = "winny"
path = "src/lib.rs"

[workspace]
members = ["crates/*", "examples/custom_material"]
exclude = ["examples", "crates/deprecated"]

[dependencies]
ecs = { path = "crates/ecs" }
audio = { path = "crates/audio" }
log = { path = "crates/log" }
util = { path = "crates/util" }
app = { path = "crates/app" }
math = { path = "crates/math" }
asset = { path = "crates/asset" }
gfx = { path = "crates/gfx" }
hot_reload = { path = "crates/hot_reload", optional = true }
editor = { path = "crates/editor", optional = true }

[features]
default = ["egui", "text"]

hot_reload = ["dep:hot_reload"]
editor = [
  "dep:editor",
  "ecs/editor",
  "math/widgets",
  "audio/widgets",
  "gfx/widgets",
  "asset/widgets",
  "app/editor",
]
egui = ["gfx/egui"]
text = ["gfx/text"]
gilrs = ["app/controller"]
