[package]
name = "app"
version = "0.1.0"
edition = "2021"


[dependencies]
ecs = { path = "../ecs" }
util = { path = "../util" }
winny_math = { path = "../winny_math" }

chrono = { version = "0.4.19", features = ["wasmbind"] }
winit = { version = "0.30.3", features = ["rwh_05"] }

gilrs = { version = "0.10.3", optional = true }

[features]
controller = ["gilrs"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
