[package]
name = "app"
version = "0.1.0"
edition = "2021"


[dependencies]
ecs = { path = "../ecs" }
util = { path = "../util" }
math = { path = "../math" }

wgpu = "0.20.1"
chrono = { version = "0.4.19", features = ["wasmbind"] }
winit = { version = "0.30.3", features = ["rwh_05"] }
bytemuck = { version = "1.12", features = ["derive"] }

gilrs = { version = "0.10.3", optional = true }

[features]
controller = ["gilrs"]
editor = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "HtmlCanvasElement",
] }
wgpu = { version = "0.20.1", features = ["webgpu"] }
