[package]
name = "app"
version = "0.1.0"
edition = "2021"


[dependencies]
ecs = { path = "../ecs" }
util = { path = "../util" }
math = { path = "../math" }

wgpu.workspace = true
chrono.workspace = true
winit.workspace = true
bytemuck.workspace = true

gilrs = { version = "0.10.3", optional = true }

[features]
controller = ["gilrs"]
editor = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "HtmlCanvasElement",
  "Location",
  "Blob",
  "RequestInit",
  "RequestMode",
  "Request",
  "ImageData",
  "Response",
  "HtmlImageElement",
  "WebGl2RenderingContext",
  "CanvasRenderingContext2d",
] }
wgpu = { version = "0.20.1", features = ["webgpu"] }
