[package]
name = "asset"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { path = "../util" }
app = { path = "../app" }
ecs = { path = "../ecs" }

pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = "0.12.5"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3" }
