[package]
name = "audio"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { path = "../util" }
asset = { path = "../asset" }
app = { path = "../app" }
ecs = { path = "../ecs" }
# for asset loading, not actually used
render = { path = "../render" }

cpal = { version = "0.15.3", features = ["wasm-bindgen"] }

[dev-dependencies]
tracing-test = "0.2.5"
