[package]
name = "audio"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { path = "../util" }
asset = { path = "../asset" }
app = { path = "../app" }
ecs = { path = "../ecs" }

rand.workspace = true
cpal = { version = "0.15.3", features = ["wasm-bindgen"] }
hound = "3.5.1"

[dev-dependencies]
tracing-test = "0.2.5"

[features]
widgets = []
