[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { path = "../util" }
ecs_macro = { path = "macro" }

fxhash.workspace = true
cgmath.workspace = true
egui = { version = "0.28.1", optional = true }

[dev-dependencies]
tracing-test = "0.2.5"

[features]
editor = ["dep:egui", "ecs_macro/widgets"]
