[package]
name = "gfx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
util = { path = "../util" }
ecs = { path = "../ecs" }
math = { path = "../math" }
app = { path = "../app" }
asset = { path = "../asset" }
cereal = { path = "../cereal" }

tobj = { version = "4.0.2", features = ["async"] }
image = "0.25.1"

cgmath.workspace = true
pollster.workspace = true
bytemuck.workspace = true
wgpu.workspace = true
rand.workspace = true
fxhash.workspace = true

egui = "0.28.1"
egui-wgpu = "0.28.1"
wgpu_text = { version = "0.8.8", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wgpu = { version = "0.20.1", features = ["webgpu", "webgl"] }
# winit depends on getrandom without the js binding, causing wasm-pack to fail
getrandom = { version = "0.2.15", features = ["js"] }


[features]
text = ["dep:wgpu_text"]
