[package]
name = "render"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { path = "../util" }
ecs = { path = "../ecs" }
winny_math = { path = "../winny_math" }
app = { path = "../app" }

wgpu = "0.20.1"
pollster = "0.3.0"
fxhash = "0.2.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.20.1", features = ["webgl"] }
console_error_panic_hook = "0.1.6"
