[package]
name = "winny_engine"
version = "0.1.0"
edition = "2021"


[dependencies]
ecs = { path = "../ecs" }
logging = { path = "../logging" }
hot_reload = { path = "../hot_reload" }

gilrs = "0.10.3"
winit = "0.29.15"
wgpu = "0.19.3"
env_logger = "0.10"
log = "0.4"

# [target.'cfg(target_os = "windows")'.dependencies]
# windows = { version = "0.54.0", features = [
#     "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", 
#     "Win32_System_LibraryLoader", "Win32_Graphics_Gdi",
#     "Win32_Graphics_OpenGL", "Win32_System_Performance",
#     "Win32_System_Com", "Win32_Media_Audio_XAudio2",
#     "implement"]}
